# madharness-mini

./: .env.example  .gitignore  COURSE.md  LABS.md  LICENSE.md  README.md  pyproject.toml
docs/: README.md  agent-skills.md  agents-skills-roadmap.md  apply-patch.md  capabilities.md  code-overview.md  context-layer.md  hooks.md  mcp-implementation-plan.html  mcp-roadmap.md  mcp.md  project-instructions.md  subagents.md
licenses/: CC-BY-NC-SA-4.0.ru.txt  POLYFORM-NONCOMMERCIAL-1.0.0.en.md  POLYFORM-NONCOMMERCIAL-1.0.0.ru.md
madharness_mini/: __main__.py  cli.py  config.py  instructions.py  loop.py  model.py  model_loop.py  policy.py  tools.py  trace.py  utils.py
madharness_mini/context/: __init__.py  bootstrap.py  budget.py  fragments.py  history.py  manager.py  render.py
madharness_mini/hooks/: __init__.py  commands.py  config.py  manager.py  redaction.py  types.py
madharness_mini/mcp/: __init__.py  config.py  protocol.py  provider.py  results.py  stdio.py
madharness_mini/prompts/: system.md
madharness_mini/skills/: __init__.py  activation.py  catalog.py  loader.py  provider.py  types.py
madharness_mini/subagents/: __init__.py  loader.py  orchestration.py  runner.py  runtime.py  tools.py  types.py
madharness_mini/tools/: __init__.py  builtins.py  context.py  files.py  images.py  patch.py  registry.py  search.py  shell.py  specs.py
tests/: helpers.py  test_config_cli.py  test_context.py  test_core.py  test_hooks.py  test_instructions.py  test_mcp.py  test_model_loop.py  test_policy_utils.py  test_skills.py  test_subagents.py  test_tools.py
(+4 files in other folders)
